# cryptoTradingBot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  config.json  dead_code_report.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run_api.py  run_strategy_tests.sh  run_test_api.py  setup.sh  test_telegram_bot.py
.cursor/: mcp.json
config/: backtest_config.json  backtest_config_2024.json  backtest_config_2025Q1.json  bot_config.yaml  cloudflare.env.example  default.yml  freqtrade.json  test_mode.json
config/grafana/: grafana.ini
config/vault/: config.hcl  vault-init.sh
docs/: backtesting_guide.md  cli_telegram.md  index.md  installation.md  telegram_bot.md
docs/security/: README.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.next/: build-manifest.json  trace
frontend/api/: dashboard.js  mockData.js
frontend/components/: DashboardLayout.js  PerformanceCharts.js  PortfolioOverview.js  TradeHistory.js
frontend/context/: AuthContext.js  ThemeContext.js
frontend/pages/: _app.js  _document.js  backtest-run.js  backtest.js  index.js  login.js  parameters.js  (+2 more)
migrations/: alembic.ini
results/: .last_result.json  backtest_results-2025-05-25_17-10-58.meta.json  simple_backtest_data.csv
scripts/: auto_recovery.py  cli.py  collect_historical_data.py  create_database.sql  create_performance_tables.sql  create_schema.sql  dead_code_cleaner.py  detect_secrets.py  docker_backtest_2025.sh  docker_hyperopt_with_progress.sh  docker_run_backtest.sh  download_and_backtest.py  init-db.sql  init_vault.py  init_vault.sh  monitor_logs.py  optimize_db.py  optimize_performance.py  parameter_optimization.py  prd.txt  rotate_secrets.sh  run_backtest.sh  run_telegram_bot.py  security_test.sh  security_utils.sh  setup_database.sh  setup_local_env.sh  setup_security.sh  setup_ssl.sh  strategy_comparison.py  task-complexity-report.json  test_docker_compose.sh  test_dockerfile.sh  test_telegram_bot.py  verify_data.py  walk_forward_analysis.py
src/: __init__.py  main.py
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  task_013.txt  task_014.txt  task_015.txt  tasks.json  tasks.json.bak
tests/: __init__.py  conftest.py  test_notification_system.py
(+178 files in other folders)
