[tool.poetry]
name = "altTradingBot"
version = "0.1.0"
description = "암호화폐 자동 거래 봇"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ccxt = "^4.1.13"
influxdb-client = "^1.36.1"
pandas = "^2.0.3"
numpy = "^1.24.3"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
aiohttp = "^3.8.5"
websockets = "^11.0.3"
hvac = "^1.1.1"
ta-lib = "^0.4.28"
asyncio = "^3.4.3"
loguru = "^0.7.0"
pydantic = "^2.0.3"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
aiofiles = "^23.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
